Fixed question# overlapping on small screens

--- a/bar-exam-buddy/exam-form/exam-form.css
+++ b/bar-exam-buddy/exam-form/exam-form.css
@@ -9,7 +9,7 @@
 }
 
 #question-number {
-  line-height: 10px;
+  line-height: 25px;
   font-size: 20px;
   margin-bottom: 0;
 }
